--- a/src/components/Topbar-01/Topbar.css
+++ b/src/components/Topbar-01/Topbar.css
@@ -1,6 +1,6 @@
 .top-bar-container {
 
-    z-index: 9;
+    z-index: 12;
 
     grid-area: topbar;
 
